# shoml

./: README.md  module.cmake  modules.json
include/: iotjs_somodule.h
js/: module.js
lib/: CMakeLists.txt  loadable_module.c  test_so_load.js
src/: module.c
